--- a/styles.css
+++ b/styles.css
@@ -1,18 +1,60 @@
 body {
-    background-color: white;
+    background-color: black;
+    position: absolute;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .post {
     width: 400px;
     margin: 0 auto;
+    background-color: white;
 }
 
 .header {
     display: flex;
     justify-content: space-between;
+    align-items: center;
+    padding: 10px;
 }
 
+.profile_img{
+    display: flex;
+    justify-content: center;
+    width: 50px;
+    height: 50px;
+}
 .left_header {
     display: flex;
     
+}
+h1{
+    font-weight: bold;
+    font-family: 'Roboto', sans-serif;
+    font-size: 18px;
+    margin-block-start: 0em;
+    margin-block-end: 0em;
+}
+h2{
+    font-weight: 100;
+    font-family: 'Roboto', sans-serif;
+    font-size: 16px;
+    margin-block-start: 0em;
+    margin-block-end: 0em;
+}
+
+.user{
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: center;
+}
+
+.icon{
+    height: 40px;
+    width: 40px;
 }
